kubernetes/loki/helm/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external # change with your value
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.techcasa.io`) # change with your value
      kind: Rule
      services:
        - name: loki-grafana
          port: 80
  tls:
    secretName: techcasa-io-production-tls # change this to your secret!!!
